simdX86/c2nimsrc/simdSse.h

__m128 _mm_cmpneq_ss (__m128 a, __m128 b);
__m128d _mm_cmpnge_pd (__m128d a, __m128d b);
__m128 _mm_cmpnge_ps (__m128 a, __m128 b);
__m128d _mm_cmpnge_sd (__m128d a, __m128d b);
__m128 _mm_cmpnge_ss (__m128 a, __m128 b);
__m128d _mm_cmpngt_pd (__m128d a, __m128d b);
__m128 _mm_cmpngt_ps (__m128 a, __m128 b);
__m128d _mm_cmpngt_sd (__m128d a, __m128d b);
__m128 _mm_cmpngt_ss (__m128 a, __m128 b);
__m128d _mm_cmpnle_pd (__m128d a, __m128d b);
__m128 _mm_cmpnle_ps (__m128 a, __m128 b);
__m128d _mm_cmpnle_sd (__m128d a, __m128d b);
__m128 _mm_cmpnle_ss (__m128 a, __m128 b);
__m128d _mm_cmpnlt_pd (__m128d a, __m128d b);
__m128 _mm_cmpnlt_ps (__m128 a, __m128 b);
__m128d _mm_cmpnlt_sd (__m128d a, __m128d b);
__m128 _mm_cmpnlt_ss (__m128 a, __m128 b);
__m128d _mm_cmpord_pd (__m128d a, __m128d b);
__m128 _mm_cmpord_ps (__m128 a, __m128 b);
__m128d _mm_cmpord_sd (__m128d a, __m128d b);
__m128 _mm_cmpord_ss (__m128 a, __m128 b);
__m128d _mm_cmpunord_pd (__m128d a, __m128d b);
__m128 _mm_cmpunord_ps (__m128 a, __m128 b);
__m128d _mm_cmpunord_sd (__m128d a, __m128d b);
__m128 _mm_cmpunord_ss (__m128 a, __m128 b);
int _mm_comieq_sd (__m128d a, __m128d b);
int _mm_comieq_ss (__m128 a, __m128 b);
int _mm_comige_sd (__m128d a, __m128d b);
int _mm_comige_ss (__m128 a, __m128 b);
int _mm_comigt_sd (__m128d a, __m128d b);
int _mm_comigt_ss (__m128 a, __m128 b);
int _mm_comile_sd (__m128d a, __m128d b);
int _mm_comile_ss (__m128 a, __m128 b);
int _mm_comilt_sd (__m128d a, __m128d b);
int _mm_comilt_ss (__m128 a, __m128 b);
int _mm_comineq_sd (__m128d a, __m128d b);
int _mm_comineq_ss (__m128 a, __m128 b);
unsigned int _mm_crc32_u16 (unsigned int crc, unsigned short v);
unsigned int _mm_crc32_u32 (unsigned int crc, unsigned int v);
uint64 _mm_crc32_u64 (uint64 crc, uint64 v);
unsigned int _mm_crc32_u8 (unsigned int crc, unsigned char v);
__m128 _mm_cvt_pi2ps (__m128 a, __m64 b);
__m64 _mm_cvt_ps2pi (__m128 a);
__m128 _mm_cvt_si2ss (__m128 a, int b);
int _mm_cvt_ss2si (__m128 a);
__m128i _mm_cvtepi16_epi32 (__m128i a);
__m128i _mm_cvtepi16_epi64 (__m128i a);
__m128i _mm_cvtepi32_epi64 (__m128i a);
__m128d _mm_cvtepi32_pd (__m128i a);
__m128 _mm_cvtepi32_ps (__m128i a);
__m128i _mm_cvtepi8_epi16 (__m128i a);
__m128i _mm_cvtepi8_epi32 (__m128i a);
__m128i _mm_cvtepi8_epi64 (__m128i a);
__m128i _mm_cvtepu16_epi32 (__m128i a);
__m128i _mm_cvtepu16_epi64 (__m128i a);
__m128i _mm_cvtepu32_epi64 (__m128i a);
__m128i _mm_cvtepu8_epi16 (__m128i a);
__m128i _mm_cvtepu8_epi32 (__m128i a);
__m128i _mm_cvtepu8_epi64 (__m128i a);
__int64 _mm_cvtm64_si64 (__m64 a);
__m128i _mm_cvtpd_epi32 (__m128d a);
__m64 _mm_cvtpd_pi32 (__m128d a);
__m128 _mm_cvtpd_ps (__m128d a);
__m128 _mm_cvtpi16_ps (__m64 a);
__m128d _mm_cvtpi32_pd (__m64 a);
__m128 _mm_cvtpi32_ps (__m128 a, __m64 b);
__m128 _mm_cvtpi32x2_ps (__m64 a, __m64 b);
__m128 _mm_cvtpi8_ps (__m64 a);
__m128i _mm_cvtps_epi32 (__m128 a);
__m128d _mm_cvtps_pd (__m128 a);
__m64 _mm_cvtps_pi16 (__m128 a);
__m64 _mm_cvtps_pi32 (__m128 a);
__m64 _mm_cvtps_pi8 (__m128 a);
__m128 _mm_cvtpu16_ps (__m64 a);
__m128 _mm_cvtpu8_ps (__m64 a);
double _mm_cvtsd_f64 (__m128d a);
int _mm_cvtsd_si32 (__m128d a);
__int64 _mm_cvtsd_si64 (__m128d a);
__int64 _mm_cvtsd_si64x (__m128d a);
__m128 _mm_cvtsd_ss (__m128 a, __m128d b);
int _mm_cvtsi128_si32 (__m128i a);
__int64 _mm_cvtsi128_si64 (__m128i a);
__int64 _mm_cvtsi128_si64x (__m128i a);
__m128d _mm_cvtsi32_sd (__m128d a, int b);
__m128i _mm_cvtsi32_si128 (int a);
__m64 _mm_cvtsi32_si64 (int a);
__m128 _mm_cvtsi32_ss (__m128 a, int b);
__m64 _mm_cvtsi64_m64 (__int64 a);
__m128d _mm_cvtsi64_sd (__m128d a, __int64 b);
__m128i _mm_cvtsi64_si128 (__int64 a);
int _mm_cvtsi64_si32 (__m64 a);
__m128 _mm_cvtsi64_ss (__m128 a, __int64 b);
__m128d _mm_cvtsi64x_sd (__m128d a, __int64 b);
__m128i _mm_cvtsi64x_si128 (__int64 a);
float _mm_cvtss_f32 (__m128 a);
__m128d _mm_cvtss_sd (__m128d a, __m128 b);
int _mm_cvtss_si32 (__m128 a);
__int64 _mm_cvtss_si64 (__m128 a);
__m64 _mm_cvtt_ps2pi (__m128 a);
int _mm_cvtt_ss2si (__m128 a);
__m128i _mm_cvttpd_epi32 (__m128d a);
__m64 _mm_cvttpd_pi32 (__m128d a);
__m128i _mm_cvttps_epi32 (__m128 a);
__m64 _mm_cvttps_pi32 (__m128 a);
int _mm_cvttsd_si32 (__m128d a);
__int64 _mm_cvttsd_si64 (__m128d a);
__int64 _mm_cvttsd_si64x (__m128d a);
int _mm_cvttss_si32 (__m128 a);