simdX86/simdSseGeneric.nim

proc cmpneq_ss*(a: m128; b: m128): m128 {.importc: "_mm_cmpneq_ss",
                                    header: "immintrin.h".}
proc cmpnge*(a: m128d; b: m128d): m128d {.importc: "_mm_cmpnge_pd",
                                    header: "immintrin.h".}
proc cmpnge*(a: m128; b: m128): m128 {.importc: "_mm_cmpnge_ps", header: "immintrin.h".}
proc cmpnge_sd*(a: m128d; b: m128d): m128d {.importc: "_mm_cmpnge_sd",
                                       header: "immintrin.h".}
proc cmpnge_ss*(a: m128; b: m128): m128 {.importc: "_mm_cmpnge_ss",
                                    header: "immintrin.h".}
proc cmpngt*(a: m128d; b: m128d): m128d {.importc: "_mm_cmpngt_pd",
                                    header: "immintrin.h".}
proc cmpngt*(a: m128; b: m128): m128 {.importc: "_mm_cmpngt_ps", header: "immintrin.h".}
proc cmpngt_sd*(a: m128d; b: m128d): m128d {.importc: "_mm_cmpngt_sd",
                                       header: "immintrin.h".}
proc cmpngt_ss*(a: m128; b: m128): m128 {.importc: "_mm_cmpngt_ss",
                                    header: "immintrin.h".}
proc cmpnle*(a: m128d; b: m128d): m128d {.importc: "_mm_cmpnle_pd",
                                    header: "immintrin.h".}
proc cmpnle*(a: m128; b: m128): m128 {.importc: "_mm_cmpnle_ps", header: "immintrin.h".}
proc cmpnle_sd*(a: m128d; b: m128d): m128d {.importc: "_mm_cmpnle_sd",
                                       header: "immintrin.h".}
proc cmpnle_ss*(a: m128; b: m128): m128 {.importc: "_mm_cmpnle_ss",
                                    header: "immintrin.h".}
proc cmpnlt*(a: m128d; b: m128d): m128d {.importc: "_mm_cmpnlt_pd",
                                    header: "immintrin.h".}
proc cmpnlt*(a: m128; b: m128): m128 {.importc: "_mm_cmpnlt_ps", header: "immintrin.h".}
proc cmpnlt_sd*(a: m128d; b: m128d): m128d {.importc: "_mm_cmpnlt_sd",
                                       header: "immintrin.h".}
proc cmpnlt_ss*(a: m128; b: m128): m128 {.importc: "_mm_cmpnlt_ss",
                                    header: "immintrin.h".}
proc cmpord*(a: m128d; b: m128d): m128d {.importc: "_mm_cmpord_pd",
                                    header: "immintrin.h".}
proc cmpord*(a: m128; b: m128): m128 {.importc: "_mm_cmpord_ps", header: "immintrin.h".}
proc cmpord_sd*(a: m128d; b: m128d): m128d {.importc: "_mm_cmpord_sd",
                                       header: "immintrin.h".}
proc cmpord_ss*(a: m128; b: m128): m128 {.importc: "_mm_cmpord_ss",
                                    header: "immintrin.h".}
proc cmpunord*(a: m128d; b: m128d): m128d {.importc: "_mm_cmpunord_pd",
                                      header: "immintrin.h".}
proc cmpunord*(a: m128; b: m128): m128 {.importc: "_mm_cmpunord_ps",
                                   header: "immintrin.h".}
proc cmpunord_sd*(a: m128d; b: m128d): m128d {.importc: "_mm_cmpunord_sd",
    header: "immintrin.h".}
proc cmpunord_ss*(a: m128; b: m128): m128 {.importc: "_mm_cmpunord_ss",
                                      header: "immintrin.h".}
proc comieq_sd*(a: m128d; b: m128d): cint {.importc: "_mm_comieq_sd",
                                      header: "immintrin.h".}
proc comieq_ss*(a: m128; b: m128): cint {.importc: "_mm_comieq_ss",
                                    header: "immintrin.h".}
proc comige_sd*(a: m128d; b: m128d): cint {.importc: "_mm_comige_sd",
                                      header: "immintrin.h".}
proc comige_ss*(a: m128; b: m128): cint {.importc: "_mm_comige_ss",
                                    header: "immintrin.h".}
proc comigt_sd*(a: m128d; b: m128d): cint {.importc: "_mm_comigt_sd",
                                      header: "immintrin.h".}
proc comigt_ss*(a: m128; b: m128): cint {.importc: "_mm_comigt_ss",
                                    header: "immintrin.h".}
proc comile_sd*(a: m128d; b: m128d): cint {.importc: "_mm_comile_sd",
                                      header: "immintrin.h".}
proc comile_ss*(a: m128; b: m128): cint {.importc: "_mm_comile_ss",
                                    header: "immintrin.h".}
proc comilt_sd*(a: m128d; b: m128d): cint {.importc: "_mm_comilt_sd",
                                      header: "immintrin.h".}
proc comilt_ss*(a: m128; b: m128): cint {.importc: "_mm_comilt_ss",
                                    header: "immintrin.h".}
proc comineq_sd*(a: m128d; b: m128d): cint {.importc: "_mm_comineq_sd",
                                       header: "immintrin.h".}
proc comineq_ss*(a: m128; b: m128): cint {.importc: "_mm_comineq_ss",
                                     header: "immintrin.h".}
proc crc32_u16*(crc: cuint; v: cushort): cuint {.importc: "_mm_crc32_u16",
    header: "immintrin.h".}
proc crc32_u32*(crc: cuint; v: cuint): cuint {.importc: "_mm_crc32_u32",
    header: "immintrin.h".}
proc crc32_u64*(crc: uint64; v: uint64): uint64 {.importc: "_mm_crc32_u64",
    header: "immintrin.h".}
proc crc32_u8*(crc: cuint; v: cuchar): cuint {.importc: "_mm_crc32_u8",
    header: "immintrin.h".}
proc cvt_pi2ps*(a: m128; b: m64): m128 {.importc: "_mm_cvt_pi2ps", header: "immintrin.h".}
proc cvt_ps2pi*(a: m128): m64 {.importc: "_mm_cvt_ps2pi", header: "immintrin.h".}
proc cvt_si2ss*(a: m128; b: cint): m128 {.importc: "_mm_cvt_si2ss",
                                    header: "immintrin.h".}
proc cvt_ss2si*(a: m128): cint {.importc: "_mm_cvt_ss2si", header: "immintrin.h".}
proc cvtepi16_epi32*(a: m128i): m128i {.importc: "_mm_cvtepi16_epi32",
                                    header: "immintrin.h".}
proc cvtepi16_epi64*(a: m128i): m128i {.importc: "_mm_cvtepi16_epi64",
                                    header: "immintrin.h".}
proc cvtepi32_epi64*(a: m128i): m128i {.importc: "_mm_cvtepi32_epi64",
                                    header: "immintrin.h".}
proc cvtepi32*(a: m128i): m128d {.importc: "_mm_cvtepi32_pd", header: "immintrin.h".}
proc cvtepi32*(a: m128i): m128 {.importc: "_mm_cvtepi32_ps", header: "immintrin.h".}
proc cvtepi8_epi16*(a: m128i): m128i {.importc: "_mm_cvtepi8_epi16",
                                   header: "immintrin.h".}
proc cvtepi8_epi32*(a: m128i): m128i {.importc: "_mm_cvtepi8_epi32",
                                   header: "immintrin.h".}
proc cvtepi8_epi64*(a: m128i): m128i {.importc: "_mm_cvtepi8_epi64",
                                   header: "immintrin.h".}
proc cvtepu16_epi32*(a: m128i): m128i {.importc: "_mm_cvtepu16_epi32",
                                    header: "immintrin.h".}
proc cvtepu16_epi64*(a: m128i): m128i {.importc: "_mm_cvtepu16_epi64",
                                    header: "immintrin.h".}
proc cvtepu32_epi64*(a: m128i): m128i {.importc: "_mm_cvtepu32_epi64",
                                    header: "immintrin.h".}
proc cvtepu8_epi16*(a: m128i): m128i {.importc: "_mm_cvtepu8_epi16",
                                   header: "immintrin.h".}
proc cvtepu8_epi32*(a: m128i): m128i {.importc: "_mm_cvtepu8_epi32",
                                   header: "immintrin.h".}
proc cvtepu8_epi64*(a: m128i): m128i {.importc: "_mm_cvtepu8_epi64",
                                   header: "immintrin.h".}
proc cvtm64_si64*(a: m64): int64 {.importc: "_mm_cvtm64_si64", header: "immintrin.h".}
proc cvtpd_epi32*(a: m128d): m128i {.importc: "_mm_cvtpd_epi32", header: "immintrin.h".}
proc cvtpd_pi32*(a: m128d): m64 {.importc: "_mm_cvtpd_pi32", header: "immintrin.h".}
proc cvtpd*(a: m128d): m128 {.importc: "_mm_cvtpd_ps", header: "immintrin.h".}
proc cvtpi16*(a: m64): m128 {.importc: "_mm_cvtpi16_ps", header: "immintrin.h".}
proc cvtpi32*(a: m64): m128d {.importc: "_mm_cvtpi32_pd", header: "immintrin.h".}
proc cvtpi32*(a: m128; b: m64): m128 {.importc: "_mm_cvtpi32_ps", header: "immintrin.h".}
proc cvtpi32x2*(a: m64; b: m64): m128 {.importc: "_mm_cvtpi32x2_ps",
                                  header: "immintrin.h".}
proc cvtpi8*(a: m64): m128 {.importc: "_mm_cvtpi8_ps", header: "immintrin.h".}
proc cvtps_epi32*(a: m128): m128i {.importc: "_mm_cvtps_epi32", header: "immintrin.h".}
proc cvtps*(a: m128): m128d {.importc: "_mm_cvtps_pd", header: "immintrin.h".}
proc cvtps_pi16*(a: m128): m64 {.importc: "_mm_cvtps_pi16", header: "immintrin.h".}
proc cvtps_pi32*(a: m128): m64 {.importc: "_mm_cvtps_pi32", header: "immintrin.h".}
proc cvtps_pi8*(a: m128): m64 {.importc: "_mm_cvtps_pi8", header: "immintrin.h".}
proc cvtpu16*(a: m64): m128 {.importc: "_mm_cvtpu16_ps", header: "immintrin.h".}
proc cvtpu8*(a: m64): m128 {.importc: "_mm_cvtpu8_ps", header: "immintrin.h".}
proc cvtsd_f64*(a: m128d): cdouble {.importc: "_mm_cvtsd_f64", header: "immintrin.h".}
proc cvtsd_si32*(a: m128d): cint {.importc: "_mm_cvtsd_si32", header: "immintrin.h".}
proc cvtsd_si64*(a: m128d): int64 {.importc: "_mm_cvtsd_si64", header: "immintrin.h".}
proc cvtsd_si64x*(a: m128d): int64 {.importc: "_mm_cvtsd_si64x", header: "immintrin.h".}
proc cvtsd_ss*(a: m128; b: m128d): m128 {.importc: "_mm_cvtsd_ss", header: "immintrin.h".}
proc cvtsi128_si32*(a: m128i): cint {.importc: "_mm_cvtsi128_si32",
                                  header: "immintrin.h".}
proc cvtsi128_si64*(a: m128i): int64 {.importc: "_mm_cvtsi128_si64",
                                   header: "immintrin.h".}
proc cvtsi128_si64x*(a: m128i): int64 {.importc: "_mm_cvtsi128_si64x",
                                    header: "immintrin.h".}
proc cvtsi32_sd*(a: m128d; b: cint): m128d {.importc: "_mm_cvtsi32_sd",
                                       header: "immintrin.h".}
proc cvtsi32_si128*(a: cint): m128i {.importc: "_mm_cvtsi32_si128",
                                  header: "immintrin.h".}
proc cvtsi32_si64*(a: cint): m64 {.importc: "_mm_cvtsi32_si64", header: "immintrin.h".}
proc cvtsi32_ss*(a: m128; b: cint): m128 {.importc: "_mm_cvtsi32_ss",
                                     header: "immintrin.h".}
proc cvtsi64_m64*(a: int64): m64 {.importc: "_mm_cvtsi64_m64", header: "immintrin.h".}
proc cvtsi64_sd*(a: m128d; b: int64): m128d {.importc: "_mm_cvtsi64_sd",
                                        header: "immintrin.h".}
proc cvtsi64_si128*(a: int64): m128i {.importc: "_mm_cvtsi64_si128",
                                   header: "immintrin.h".}
proc cvtsi64_si32*(a: m64): cint {.importc: "_mm_cvtsi64_si32", header: "immintrin.h".}
proc cvtsi64_ss*(a: m128; b: int64): m128 {.importc: "_mm_cvtsi64_ss",
                                      header: "immintrin.h".}
proc cvtsi64x_sd*(a: m128d; b: int64): m128d {.importc: "_mm_cvtsi64x_sd",
    header: "immintrin.h".}
proc cvtsi64x_si128*(a: int64): m128i {.importc: "_mm_cvtsi64x_si128",
                                    header: "immintrin.h".}
proc cvtss_f32*(a: m128): cfloat {.importc: "_mm_cvtss_f32", header: "immintrin.h".}
proc cvtss_sd*(a: m128d; b: m128): m128d {.importc: "_mm_cvtss_sd",
                                     header: "immintrin.h".}
proc cvtss_si32*(a: m128): cint {.importc: "_mm_cvtss_si32", header: "immintrin.h".}
proc cvtss_si64*(a: m128): int64 {.importc: "_mm_cvtss_si64", header: "immintrin.h".}
proc cvtt_ps2pi*(a: m128): m64 {.importc: "_mm_cvtt_ps2pi", header: "immintrin.h".}
proc cvtt_ss2si*(a: m128): cint {.importc: "_mm_cvtt_ss2si", header: "immintrin.h".}
proc cvttpd_epi32*(a: m128d): m128i {.importc: "_mm_cvttpd_epi32",
                                  header: "immintrin.h".}
proc cvttpd_pi32*(a: m128d): m64 {.importc: "_mm_cvttpd_pi32", header: "immintrin.h".}
proc cvttps_epi32*(a: m128): m128i {.importc: "_mm_cvttps_epi32",
                                 header: "immintrin.h".}
proc cvttps_pi32*(a: m128): m64 {.importc: "_mm_cvttps_pi32", header: "immintrin.h".}
proc cvttsd_si32*(a: m128d): cint {.importc: "_mm_cvttsd_si32", header: "immintrin.h".}
proc cvttsd_si64*(a: m128d): int64 {.importc: "_mm_cvttsd_si64", header: "immintrin.h".}
proc cvttsd_si64x*(a: m128d): int64 {.importc: "_mm_cvttsd_si64x",
                                  header: "immintrin.h".}
proc cvttss_si32*(a: m128): cint {.importc: "_mm_cvttss_si32", header: "immintrin.h".}
